Rewrite 2: fix clipping in slideshow full-screen.

--- a/theme/pengxwang/web/style.css
+++ b/theme/pengxwang/web/style.css
@@ -770,6 +770,7 @@ article figcaption > span.caption {
 }
 @media (max-width: 600px) { /* --post-width */
   article figcaption > span.caption { margin-left: 0.3em; }
+  .slides.full-screen { overflow: visible; }
   .slide:not(.full-screen) > figure > img {
     margin-left: auto;
     margin-right: auto;
